# berbalang

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build-lxc-container.sh  build-script.sh  builder.sh  check_config.sh  config.toml  debian_dependencies.sh  docker-compose.yml  docker_start.sh  launch.py  nixos_dockerfile  run_rop.sh  run_with_trace.sh  rustdoc.sh  shell.nix  start.sh  trials.sh
analysis/: autopsy.py  describe.py  experiment.py  plot_feature.py  plot_fitness.py  plot_soup.py  population_tools.py  scatterplot.py
data/: agaricus-lepiota.tsv  cubed_plus_squared.tsv  i^2+4i-3.tsv  iris.tsv  sqrt.tsv  square.tsv
december_report/: main.tex
doc/: book.toml
doc/src/: SUMMARY.md  chapter_1.md  design_of_roper.md  literature.md
experiments/: config.toml  sshd_x86_codecov_random.toml  sshd_x86_codecov_random_alt.toml  sshd_x86_codecov_random_blind.toml  sshd_x86_codecov_random_calls.toml  sshd_x86_codecov_random_calls_alt.toml  sshd_x86_codecov_random_calls_blind.toml  sshd_x86_codecov_random_no_geography.toml  sshd_x86_codecov_random_no_geography_alt.toml  sshd_x86_codecov_random_no_sex.toml  sshd_x86_codecov_ropgadget.toml  sshd_x86_codecov_ropgadget_alt.toml  sshd_x86_codecov_ropgadget_blind.toml  sshd_x86_codecov_ropgadget_calls.toml  sshd_x86_codecov_ropgadget_calls_alt.toml  sshd_x86_codecov_ropgadget_calls_blind.toml  sshd_x86_mempat_random.toml  sshd_x86_mempat_random_alt.toml  sshd_x86_mempat_random_blind.toml  sshd_x86_mempat_random_calls.toml  sshd_x86_mempat_random_calls_alt.toml  sshd_x86_mempat_random_calls_blind.toml  sshd_x86_mempat_random_calls_ignore_stack.toml  sshd_x86_mempat_random_calls_ignore_stack_alt.toml  sshd_x86_mempat_random_ignore_stack.toml  sshd_x86_mempat_random_ignore_stack_alt.toml  sshd_x86_mempat_random_no_sex.toml  sshd_x86_mempat_ropgadget.toml  sshd_x86_mempat_ropgadget_alt.toml  sshd_x86_mempat_ropgadget_blind.toml  sshd_x86_mempat_ropgadget_calls.toml  sshd_x86_mempat_ropgadget_calls_alt.toml  sshd_x86_mempat_ropgadget_calls_blind.toml  sshd_x86_mempat_ropgadget_calls_ignore_stack.toml  sshd_x86_mempat_ropgadget_calls_ignore_stack_alt.toml  sshd_x86_mempat_ropgadget_ignore_stack.toml  sshd_x86_mempat_ropgadget_ignore_stack_alt.toml  sshd_x86_mempat_ropgadget_no_geography.toml  sshd_x86_mempat_ropgadget_no_geography_alt.toml  sshd_x86_mempat_ropgadget_no_geography_ignore_stack.toml  (+38 more)
experiments/composability_1/: uniq.toml  uniq_with_coverage.toml  uniq_with_coverage_and_novelty.toml  uniq_with_novelty.toml
experiments/intensive_regpat/: sshd_x86_regpat_novelty_random.toml  sshd_x86_regpat_novelty_random_2000.toml  sshd_x86_regpat_novelty_random_calls.toml  sshd_x86_regpat_novelty_random_calls_2000.toml  sshd_x86_regpat_novelty_ropgadget_2000.toml  sshd_x86_regpat_novelty_ropgadget_calls.toml  sshd_x86_regpat_novelty_ropgadget_calls_2000.toml  sshd_x86_regpat_novelty_ropgadget_push_2000.toml  sshd_x86_regpat_novelty_ropgadget_push_calls_2000.toml
experiments/push/: sshd_x86_regpat_novelty_ropgadget_calls.toml  sshd_x86_regpat_novelty_ropgadget_push.toml  sshd_x86_regpat_novelty_ropgadget_push_calls.toml
experiments/register_pattern_sshd/: push-regpat-with-novelty-and-uniq.toml  push-regpat-with-novelty.toml  register_patterns.txt  regpat-random-search.toml  regpat-with-novelty-and-uniq.toml  regpat-with-novelty.toml  regpat-without-novelty.toml  rg-regpat-with-novelty-and-uniq.toml  rg-regpat-with-novelty.toml  rg-regpat-without-novelty.toml
experiments/register_pattern_sshd_badbytes/: bb_regpat-with-novelty-and-uniq.toml  bb_regpat-with-novelty.toml  bb_regpat-without-novelty.toml
experiments/sex_experiment/: sshd_x86_codecov_random.toml  sshd_x86_codecov_random_alt.toml  sshd_x86_codecov_random_no_sex.toml  sshd_x86_mempat_random.toml  sshd_x86_mempat_random_alt.toml  sshd_x86_mempat_random_no_sex.toml  sshd_x86_mempat_ropgadget.toml  sshd_x86_mempat_ropgadget_alt.toml  sshd_x86_mempat_ropgadget_no_sex.toml  sshd_x86_regpat_novelty_random.toml  sshd_x86_regpat_novelty_random_alt.toml  sshd_x86_regpat_novelty_random_no_sex.toml  sshd_x86_regpat_novelty_ropgadget.toml  sshd_x86_regpat_novelty_ropgadget_alt.toml  sshd_x86_regpat_novelty_ropgadget_no_sex.toml  sshd_x86_regpat_random.toml  sshd_x86_regpat_random_alt.toml  sshd_x86_regpat_random_no_sex.toml  sshd_x86_regpat_ropgadget.toml  sshd_x86_regpat_ropgadget_alt.toml  sshd_x86_regpat_ropgadget_no_sex.toml
experiments/zeroes/: config.toml  just-zeroes.toml  novelty-plus-uniq-gadgets.toml
gadgets/: bash_gadgets.txt  sh_soup.json  sshd_ropgadget.json  sshd_ropgadget.txt
neptune/: berb_watcher.py  experiment.json  experiment.py  main.py  nereid.py  tailer.py  triton.py  watcher.py
notes/: conjectures.org  todo.md
org/: bibliography.bib  lejonet_aimee_report.org  october_report.org
src/: configure.rs  disassembler.rs  emulator.rs  error.rs  evaluator.rs  evolution.rs  fitness.rs  lib.rs  logger.rs  macros.rs  main.rs  observer.rs  ontogenesis.rs
src/creature/: chain.rs
src/emulator/: executor.rs  hatchery.rs  loader.rs  mod.rs  pack.rs  profiler.rs  register_pattern.rs
src/evolution/: lexicase.rs  metropolis.rs  mod.rs  pareto_roulette.rs  (+3 more)
tools/: gadgets.py
(+61 files in other folders)
