[package]
name = "berbalang"
version = "0.1.0"
authors = ["Oblivia Simplex <oblivia@paranoici.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
linear_gp = []
hello_world = []

[dependencies]
bson = "0.14"
byteorder = "1.2"
capstone = "0.7"
cached = "0"
csv = "1"
distance = "0.4"
futures = "0.3"
goblin = "0.2"
indexmap = "1.3"
lazy_static = "1.4"
log = "0.4"
object-pool = "0.5"
pretty_env_logger = "0.4"
rand = "0.7"
rand_isaac = "0.2"
rayon = "1.3"
rust-ini = "0.15"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
sliding_windows = "3"
threadpool = "1.8"
radix_trie = "0.1"
prefix-tree = "0.5"
toml = "0.5"
unicorn = { git = "https://github.com/oblivia-simplex/unicorn-rs", branch = "development" }

[patch."https://github.com/oblivia-simplex/unicorn-rs".unicorn]
path = "../unicorn-rs/"
paste = "0.1"
