[package]
name = "berbalang"
version = "0.1.0"
authors = ["Lucca Fraser", "lucca@inventati.org"]
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
linear_gp = []
hello_world = []

[profile.release]
debug = true
#panic = "abort" # we save a lot of time by disabling stack unwinding
#lto = "fat"
#codegen-units = 1

[dependencies]
bson = "0.15"
byteorder = "1.2"
byte-slice-cast = "0.3"
capstone = "0.7"
cached = "0"
chrono = "0.4"
csv = "1"
deflate = { version = "0.8.4", features = [ "gzip" ] }
distance = "0.4"
futures = "0.3"
goblin = "0.2"
hamming = "0.1"
hashbrown = { version = "0.7", features = ["serde", "rayon", "inline-more"] }
# indexmap = { version = "1.3", features = ["serde-1"] }
itertools = "0.9"
log = "0.4"
non-dominated-sort = { git = "https://github.com/oblivia-simplex/non-dominated-sort-rs" }
object-pool = "0.5"
env_logger = "0.7"
pretty_env_logger = "0.4"
rand = "0.7"
rand_distr = "0.2"
rand_isaac = "0.2"
rayon = "1.3"
rust-ini = "0.15"
seahash = "4"
serde = { version = "1", features = ["derive"] }
serde-pickle = "0.6"
serde_json = "1"
serde_derive = "1"
sliding_windows = "3"
threadpool = "1.8"
radix_trie = "0.1"
paste = "0.1"
plotlib = "0.5"
prefix-tree = { git = "https://github.com/oblivia-simplex/prefix-tree", branch = "master" }
toml = "0.5"
unicorn = { git = "https://github.com/oblivia-simplex/unicorn-rs", branch = "development" }

[patch."https://github.com/oblivia-simplex/unicorn-rs".unicorn]
path = "../unicorn-rs/"
paste = "0.1"

[patch."https://github.com/oblivia-simplex/non-dominated-sort-rs".non-dominated-sort]
path = "../non-dominated-sort-rs"
