[package]
name = "berbalang"
version = "0.1.0"
authors = ["Lucca Fraser", "lucca@inventati.org"]
license = "GPL-2.0"
edition = "2018"
default-run = "berbalang"

[lib]
name = "berbalib"
path = "src/lib.rs"

[[bin]]
name = "berbalang"
path = "src/bin/berbalang.rs"

[[bin]]
name = "run_rop"
path = "src/bin/run_rop.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
linear_gp = []
hello_world = []
disassemble_trace = []

[profile.release]
debug = true
#panic = "abort" 
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
ansi-colors = "0.3"
atomig = "0.1" # TODO: replace Mutexed cached scalar with atomig f64
bitflags = "1"
bson = "0.15"
byteorder = "1.2"
byte-slice-cast = "0.3"
capstone = "0.7"
cached = "0"
chrono = "0.4"
coredump = "0.1"
crossbeam = "0.7"
crossbeam-deque = "0.7"
csv = "1"
deflate = { version = "0.8.4", features = [ "gzip" ] }
distance = "0.4"
falcon = { git = "https://github.com/oblivia-simplex/falcon", features = [ "capstone4", "thread_safe" ] }
fasteval = { git = "https://github.com/oblivia-simplex/fasteval"}
fnv = "1"
gethostname = "0.2"
goblin = { version = "0.2", features = [ "alloc" ] }
hamming = "0.1"
hashbrown = { version = "0.7", features = ["serde", "rayon", "inline-more"] }
hex = "0.4"
itertools = "0.9"
log = "0.4"
non-dominated-sort = { git = "https://github.com/oblivia-simplex/non-dominated-sort-rs" }
object-pool = "0.5"
env_logger = "0.7"
num_cpus = "1"
pretty_env_logger = "0.4"
rand = "0.7"
rand_xoshiro = "0.4"
rand_distr = "0.2"
rayon = "1.3"
ron = "0.6"
rust-ini = "0.15"
seahash = "4"
serde = { version = "1", features = ["derive", "rc"] }
serde-pickle = "0.6"
serde_json = "1"
serde_derive = "1"
subslice = "0.2"
sliding_windows = "3"
streaming-stats = "0.1"
threadpool = "1.8"
radix_trie = "0.1"
parse_duration = "2"
paste = "0.1"
pergola = "0.7"
plotlib = "0.5"
prefix-tree = { git = "https://github.com/oblivia-simplex/prefix-tree", branch = "master" }
procinfo = "0.4"
toml = "0.5"
unicorn = { git = "https://github.com/oblivia-simplex/unicorn-rs", branch = "development" }

#[patch."https://github.com/oblivia-simplex/unicorn-rs".unicorn]
#path = "../unicorn-rs/"
#paste = "0.1"

#[patch."https://github.com/oblivia-simplex/non-dominated-sort-rs".non-dominated-sort]
#path = "../non-dominated-sort-rs"

#[patch."https://github.com/oblivia-simplex/falcon".falcon]
#path = "../falcon"
